# advent-of-code-2025

./: pyproject.toml
day-01/: day-01.py
day-02/: day-02.py
day-03/: day-03.py
day-04/: day-04.py
day-05/: day-05.py
day-06/: day-06.py
day-07/: day-07.py
