[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "AndrewS891",email = "andrewsimpson891@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
